--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -130,6 +130,17 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
+                                            generování AI modelem gpt-4
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
                                             100 AI kreditů / měsíc
                                         </div>
                                     </div>
@@ -239,6 +250,17 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
+                                            generování AI modelem gpt-4
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
                                             1 000 AI kreditů / měsíc
                                         </div>
                                     </div>
@@ -338,6 +360,17 @@
                                         </div>
                                         <div class="px-2">
                                             neomezené sdílení obsahu
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            generování AI modelem gpt-4
                                         </div>
                                     </div>
                                 </li>
