--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="">
-              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-otocit'>Otočit</a>
+              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-otocit'>otočit</a>
             </div>
             <div class="disabled" style="min-width: 5rem; opacity: 0">X</div>
           </div>
@@ -186,8 +186,8 @@
               </div>
             </div>
             <div>
-              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;"><i class="far fa-thumbs-down"></i></a>
-              <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-know" style="min-width: 5rem;"><i class="far fa-thumbs-up"></i></a>
+              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-know" style="min-width: 5rem;">umím</a>
+              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;">další</a>
             </div>
             <div id="rotate-div" style="min-width: 5rem">
               <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt"></i></a>
@@ -201,11 +201,11 @@
           <div class="text-muted text-center text-small d-flex justify-content-center align-items-center mt-4">
             <span class="knows-all-badge hide" id="knows-all-badge">Umíš všechny kartičky v tomto balíčku</span>
             <% if(currentUser && currentUser._id.toString() === section.author.toString()){ %>
-              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit kartu</a>
-              <a href="#" class="text-muted mx-2" id="btn-odstranit">Odstranit kartu</a>
+              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit kartičku</a>
+              <a href="#" class="text-muted mx-2" id="btn-odstranit">Odstranit kartičku</a>
             <% } %>
-            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="n-key">[N = <i class="far fa-thumbs-down"></i>]</a>
-            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="m-key">[mezerník / M = <i class="far fa-thumbs-up"></i>]</a>
+            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="n-key">[N = umím]</a>
+            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="m-key">[mezerník / M = další]</a>
           </div>
         </div>
       </div>
@@ -229,7 +229,7 @@
     </div>
 
     <% if(!currentUser || (currentUser && !currentUser.card30ExplanationModalShown)){ %>
-      <!-- MODAL - App Anouncement with script -->
+      <!-- MODAL - Explanation modal -->
       <div class="modal fade" id="card30ExplanationModal" tabindex="-1">
           <div class="modal-dialog modal-dialog-centered edit-modal">
           <div class="modal-content">
@@ -238,25 +238,20 @@
                       <div></div>
                       <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                   </div>
-                  <% if (currentUser && currentUser.cardsSeen > 10) { %>
-                    <h3 class="text-center mt-3 mb-4">Představujeme palce!</h3>
-                  <% } else { %>
-                    <h3 class="text-center mt-3 mb-4">Jak fungují palce?</h3>
-                  <% } %>
+                  <h4 class="text-center mt-3 mb-4">Opakuj jen kartičky, které potřebuješ</h4>
                   <div class="d-flex justify-content-center mt-4">
                     <div class="d-flex">
-                      <div class="d-flex flex-column align-items-center mx-4">
-                        <a href="#" class="btn btn-lg btn-outline-danger easy-btn no-click" style="min-width: 5rem;"><i class="far fa-thumbs-down"></i></a>
-                        <h5 class="text-center mt-2">Nevím</h5>
+                      <div class="d-flex flex-column align-items-center mx1">
+                        <a href="#" class="btn btn-lg btn-outline-danger easy-btn no-click" style="min-width: 5rem;">umím</a>
                       </div>
-                      <div class="d-flex flex-column align-items-center mx-4">
-                        <a href="#" class="btn btn-lg btn-danger easy-btn no-click" style="min-width: 5rem;"><i class="far fa-thumbs-up"></i></a>
-                        <h5 class="text-center mt-2">Vím</h5>
+                      <div class="d-flex flex-column align-items-center mx-1">
+                        <a href="#" class="btn btn-lg btn-outline-danger easy-btn no-click" style="min-width: 5rem;">další</a>
                       </div>
                     </div>
                   </div>
                   <div class="text-center mt-4">
-                    <p>Označ kartičku podle toho, zda už ji ovládáš nebo se k ní potřebuješ později vrátit. Při <span class="color-1"><b>dalším procházení</b></span> balíčku ti ukážeme <span class="color-1"><b>jen ty</b></span> kartičky, ke kterým se <span class="color-1"><b>potřebuješ</b></span> vrátit.</p>
+                    <p>Kartičku můžeš označit tlačítkem <b class="color-1">umím</b>. Při dalším procházení balíčku ti ji pak nebudeme ukazovat.</p>
+                    <p>Balíček můžeš kdykoliv <b class="color-1">resetovat</b> a vrátit se <b class="color-1"> <br />ke všem</b> kartičkám.</p>
                     <% if (!currentUser) { %>
                       <p class="mt-3 text-smaller text-muted mx-4">Funkce je plnohodnotně dostupná po bezplatné registraci přihlášeným uživatelům.</p>
                     <% } %>
