--- a/views/cards/show30shuffle.ejs
+++ b/views/cards/show30shuffle.ejs
@@ -164,8 +164,8 @@
               </div>
             </div>
             <div>
-              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;"><i class="far fa-thumbs-down"></i></a>
-              <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-know" style="min-width: 5rem;"><i class="far fa-thumbs-up"></i></a>
+              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-know" style="min-width: 5rem;">umím</a>
+              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;">další</a>
             </div>
             <div id="rotate-div" style="min-width: 5rem">
               <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt"></i></a>
@@ -178,11 +178,11 @@
         <div class="col-lg-6 offset-lg-2" id="mini-menu">
           <div class="text-muted text-center text-small d-flex justify-content-center align-items-center mt-4">
             <% if(currentUser && category.author && currentUser._id.toString() === category.author.toString()){ %>
-              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit kartu</a>
-              <a href="#" class="text-muted mx-2" id="btn-odstranit">Odstranit kartu</a>
+              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit kartičku</a>
+              <a href="#" class="text-muted mx-2" id="btn-odstranit">Odstranit kartičku</a>
             <% } %>
-            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="n-key">[N = <i class="far fa-thumbs-down"></i>]</a>
-            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="m-key">[mezerník / M = <i class="far fa-thumbs-up"></i>]</a>
+            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="n-key">[N = umím]</a>
+            <a class="text-muted mx-2 nezobrazovat-na-mobilu" id="m-key">[mezerník / M = další]</a>
           </div>
         </div>
       </div>
