--- a/views/invoices/showOne.ejs
+++ b/views/invoices/showOne.ejs
@@ -9,7 +9,7 @@
     />
     <title>Účtenka <%= invoice.identificationNumber %></title>
     <!-- META TAGS -->
-    <%- include('./partials/meta') %>
+    <%- include('../partials/meta') %>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
