--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -507,6 +507,13 @@
                       </tr>
 
                       <tr>
+                        <th scope="row">Generování pomocí gpt-4 od OpenAI</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
+                      <tr>
                         <th scope="row">Extra 300 AI kreditů do začátku</th>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
@@ -557,7 +564,7 @@
                           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                               <p><strong>AI kredity</strong> jsou naše <strong>virtuální měna</strong>, kterou můžeš využít k tvorbě obsahu s využitím umělé inteligence. <strong>Jeden kredit</strong> odpovídá jedné kartičce a otázce (vždy jsou vytvářeny společně, cena je tedy 0,5 kreditu "za kus"). Každý měsíc dostaneš určitý počet kreditů, které můžeš využít k tvorbě nových otázek. Pokud by ti kredity nestačily, můžeš si je dokoupit. Ze zkušenosti víme, že <strong>1 000 kreditů</strong> je <strong>optimální měsíční množství</strong> pro pravidelné vytváření obsahu.</p>
-                              <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4o</strong>.</p>
+                              <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4</strong>.</p>
                             </div>
                           </div>
                         </div>
