--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -43,31 +43,25 @@
               </p>
             </div>
           </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="d-flex justify-content-center align-items-center">
-              <a
+          <div class="d-flex justify-content-center align-items-center mt-3">
+            <a
               href="/category/<%= category%>/section/<%= section._id%>/card30/1?mode=unknown"
               class="btn btn-danger mx-1"
-              ><i class="fas fa-redo" style="margin-right: 8px"></i
-                >Opakovat</a>
-              
-              <% if (section.questions.length > 0) { %>
-              <a
-                href="/category/<%= categoryId%>/section/<%= section._id%>/test"
-                class="btn btn-danger my-3 mx-1"
-                >Spustit test</a
-              >
-              <% } %>
-            </div>
-            </div>
+              ><i class="fas fa-redo" style="margin-right: 8px"></i>Opakovat</a
+            >
+
+            <% if (section.questions.length > 0) { %>
+            <a
+              href="/category/<%= categoryId%>/section/<%= section._id%>/test"
+              class="btn btn-danger my-3 mx-1"
+              >Spustit test</a
+            >
+            <% } %>
           </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-4">
           <div class="col-12">
-            <a href="/category/<%= category%>/"
-              >Zpět na předmět</a
-            >
+            <a href="/category/<%= category%>/">zpět na předmět</a>
           </div>
         </div>
         <!--
