--- a/views/category.ejs
+++ b/views/category.ejs
@@ -603,6 +603,14 @@
           </div>
         </form>
         <div id="document-progress-container">
+          <div class="d-flex justify-content-center">
+            <img
+              src="/img/icon_ai_brain.png"
+              class="mb-2 mt-3 img-fluid"
+              alt=""
+              style="height: 72px"
+            />
+          </div>
           <h5 class="mt-3 text-center mb-2">Generuji kartičky a otázky...</h5>
           <p
             class="text-muted text-center mb-2 text-smaller"
@@ -616,6 +624,14 @@
           <p id="progress-text">Čekám na nahrání souboru...</p>
         </div>
         <div id="document-success-container" style="display: none">
+          <div class="d-flex justify-content-center">
+            <img
+              src="/img/icon_ai_brain.png"
+              class="mb-2 mt-3 img-fluid"
+              alt=""
+              style="height: 72px"
+            />
+          </div>
           <h5 class="mt-3 text-center">Dokončeno!</h5>
           <p id="document-success-text" class="text-center">
             Zbývá vám ještě 0 kreditů.
@@ -626,6 +642,14 @@
           </p>
         </div>
         <div id="document-error-container" style="display: none">
+          <div class="d-flex justify-content-center">
+            <img
+              src="/img/icon_ai_brain.png"
+              class="mb-2 mt-3 img-fluid"
+              alt=""
+              style="height: 72px"
+            />
+          </div>
           <h5 class="mt-3 text-center" id="document-error-headline">
             Generování selhalo
           </h5>
@@ -1001,14 +1025,17 @@ category.sections.forEach(section => { %>
         <div class="mt-4 text-center">
           <p>
             <b>Skvělá práce!</b> Za splnění denního cíle deset dnů v řadě jsme
-            ti právě připsali <b>dalších 500 AI kreditů</b>, které ti vystačí na
-            tvorbu 500 kartiček pomocí AI.
+            ti právě připsali <b>dalších 500 AI kreditů</b>.
+          </p>
+          <p>
+            Chceš <b>až 1 250 AI kreditů</b> měsíčně? Omrkni
+            <b>Edookio Premium</b>!
           </p>
         </div>
         <div>
           <div class="d-flex justify-content-center mt-4 mb-3">
-            <a href="#" class="btn btn-danger btn-lg" data-bs-dismiss="modal"
-              >Super, díky!</a
+            <a href="/premium" class="btn btn-danger btn-lg"
+              >Chci víc AI kreditů</a
             >
           </div>
         </div>
