--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -418,6 +418,34 @@
     </div>
 </div>
 
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <div class="card profile-card">
+                <div class="row p-3 pb-3">
+                    <div class="col-12 d-flex align-items-center">
+                        <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
+                            <img src="/img/icon_target.png" class="img-fit" alt="">
+                        </div>
+                        <div>
+                            <h3 class="px-3">Předměty</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row p-3">
+                    <div class="col-12">
+                        <% user.createdCategories?.forEach(category => { %>
+                            <div>
+                                <a href="/category/<%= category._id %>"><%= category.text %></a>
+                            </div>
+                        <% }) %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Modal Warning YEAR to SHORTER PERIOD -->
 <div class="modal fade" id="modal-warning" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
