--- a/views/categories/categories.ejs
+++ b/views/categories/categories.ejs
@@ -160,6 +160,13 @@
                           <% }); %>
                         </div>
                     </div>
+                    <div>
+                        <!-- bootstrap 5 checkbox for sharing-->
+                        <div class="form-check form-switch justify-content-between">
+                            <label class="form-check-label" for="share">Povolit sdílení předmětu mezi uživateli</label>
+                            <input class="form-check-input" type="checkbox" id="share" name="share" <% if(category.deepSharingAllowed){ %> checked <% } %>>
+                        </div>
+                    </div>
                     <button class="btn btn-danger mt-4">Uložit změny</button>
                 </form>
             </div>
