--- a/views/category.ejs
+++ b/views/category.ejs
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <% } %>
+      <% } %> <% if (category.deepSharingAllowed || isAuthor) { %>
       <div class="row mb-3 mt-2">
         <div class="col-12 d-flex justify-content-center">
           <a
@@ -102,6 +102,15 @@
           ></a>
         </div>
       </div>
+      <% } else { %>
+      <div class="row mb-3 mt-2">
+        <div class="col-12 d-flex justify-content-center">
+          <a href="#" class="btn btn-danger disabled"
+            >Sdílení není povoleno <i class="fas fa-share-alt"></i
+          ></a>
+        </div>
+      </div>
+      <% } %>
     </div>
   </div>
 
