--- a/views/index.ejs
+++ b/views/index.ejs
@@ -379,13 +379,13 @@
                 </p>
                 <% if (!generatedSectionId || !generatedCategoryId) { %>
                 <a
-                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/card30/1?mode=unknown"
+                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/card30/1?mode=unknown&demo=true"
                   class="btn btn-lg btn-danger"
                   >Vyzkoušet kartičky</a
                 >
                 <% } else { %>
                 <a
-                  href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown"
+                  href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown&demo=true"
                   class="btn btn-lg btn-danger"
                   >Vyzkoušet kartičky</a
                 >
@@ -402,13 +402,13 @@
                 </p>
                 <% if (!generatedSectionId || !generatedCategoryId) { %>
                 <a
-                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/test"
+                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/test?demo=true"
                   class="btn btn-lg btn-danger"
                   >Vyzkoušet otázky</a
                 >
                 <% } else { %>
                 <a
-                  href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/test"
+                  href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/test?demo=true"
                   class="btn btn-lg btn-danger"
                   >Vyzkoušet otázky</a
                 >
