--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -78,6 +78,7 @@
               class="btn btn-danger btn-lg mt-1"
               style="width: 200px"
               type="submit"
+              id="save-question-btn"
             >
               Uložit změny
             </button>
