--- a/views/review/showAll.ejs
+++ b/views/review/showAll.ejs
@@ -54,8 +54,8 @@
       </div>
       <% if (!demo) { %>
        <div class="col-12 d-flex justify-content-center mt-2">
-        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-danger mx-1">Přidat kartičku</a>
-        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/question/new" class="btn btn-sm btn-danger mx-1">Přidat otázku</a>
+        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-lg btn-danger mx-1">Přidat kartičku</a>
+        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/question/new" class="btn btn-lg btn-danger mx-1">Přidat otázku</a>
        </div>
       <% } else { %>
         <div class="col-12 d-flex justify-content-center mt-2">
