--- a/views/category.ejs
+++ b/views/category.ejs
@@ -649,6 +649,9 @@
             Za vytvoření každé kartičky nebo testové otázky se vám odečte jeden
             kredit.
           </p>
+          <div>
+            <a href="#" class="btn btn-danger" data-bs-dismiss="modal">Ok</a>
+          </div>
         </div>
         <div id="document-error-container" style="display: none">
           <div class="d-flex justify-content-center">
