--- a/views/review/showAll.ejs
+++ b/views/review/showAll.ejs
@@ -59,8 +59,8 @@
        </div>
       <% } else { %>
         <div class="col-12 d-flex justify-content-center mt-2">
-          <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown&demo=true" class="btn btn-sm btn-danger mx-1">Procházet kartičky</a>
-          <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/test?demo=true" class="btn btn-sm btn-danger mx-1">Procházek otázky</a>
+          <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown&demo=true" class="btn btn-lg btn-danger mx-1">Procházet kartičky</a>
+          <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/test?demo=true" class="btn btn-lg btn-danger mx-1">Procházek otázky</a>
         </div>
       <% } %>
   </div>
