--- a/views/category.ejs
+++ b/views/category.ejs
@@ -646,10 +646,10 @@
             Zbývá vám ještě 0 kreditů.
           </p>
           <p class="text-smaller text-muted text-center">
-            Za vytvoření každé kartičky nebo testové otázky se vám odečte jeden
+            Za vytvoření každé kartičky nebo testové otázky se ti odečte jeden
             kredit.
           </p>
-          <div>
+          <div class="d-flex justify-content-center mt-3">
             <a href="#" class="btn btn-danger" data-bs-dismiss="modal">Ok</a>
           </div>
         </div>
