--- a/views/home.ejs
+++ b/views/home.ejs
@@ -389,7 +389,9 @@
                           <% }); %>
                         </div>
                     </div>
-                    <button class="btn btn-danger mt-4">Vytvořit předmět</button>
+                    <div class="d-flex justify-content-center">
+                      <button class="btn btn-lg btn-danger mt-4" id="add-category-btn-on-home">Vytvořit předmět</button>
+                      </div>
                 </form>
             </div>
         </div>
