--- a/views/category.ejs
+++ b/views/category.ejs
@@ -40,8 +40,7 @@
             class="mb-2 mt-3 px-3 py-2 category-info d-flex align-items-center justify-content-between"
           >
             <p class="mb-0">
-              <b><%= category.numOfCards %></b> <%=
-              texts.categoryPage.cardsToStudy %>
+              <b><%= category.numOfCards %></b> opakovacích kartiček
             </p>
             <% if (currentUser) { %>
             <a
