--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -260,7 +260,7 @@ body {
 }
 
 .icon-background-landing {
-  background-color: #eeeeee;
+  background-color: #f7f4ef;
   height: 7rem;
   width: 7rem;
 }
