--- a/views/home.ejs
+++ b/views/home.ejs
@@ -231,7 +231,7 @@
                     <div class="card">
                       <div class="d-flex justify-content-center">
                         <div
-                          class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center"
+                          class="m-3 mb-1 rounded-circle icon-background-landing d-flex justify-content-center align-items-center"
                         >
                           <img
                             src="/img/<%= cat.icon %>"
