--- a/views/cards/show30shuffle.ejs
+++ b/views/cards/show30shuffle.ejs
@@ -37,7 +37,7 @@
       <div class="container">
         <ul class="navbar-nav">
           <li><a href="/category/<%= category._id %>" class="back-link"><i
-                class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
+                class="fas fa-chevron-left me-2 mb-2"></i>zpět na předmět</a></li>
           <li>
             <p class="m-0"><small id="categoryId" name="<%= category._id %>">
               <span class="nezobrazovat-na-mobilu">Sada náhodných kartiček z předmětu <%= category.text %></span>
