--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -37,11 +37,11 @@
         <ul class="navbar-nav">
           <% if (!currentUser) { %>
             <li><a href="/" class="back-link"><i
-                  class="fas fa-chevron-left me-2 mb-2"></i>Zpět</a></li>
+                  class="fas fa-chevron-left me-2 mb-2"></i>zpět</a></li>
             <li>
           <% } else { %>
             <li><a href="/category/<%= section.categoryId %>" class="back-link"><i
-                  class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
+                  class="fas fa-chevron-left me-2 mb-2"></i>zpět na předmět</a></li>
             <li>
           <% } %>
           
