--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -38,11 +38,11 @@
         <ul class="navbar-nav">
             <% if (!currentUser) { %>
               <li><a href="/" class="back-link"><i
-                    class="fas fa-chevron-left me-2 mb-2"></i>Zpět</a></li>
+                    class="fas fa-chevron-left me-2 mb-2"></i>zpět</a></li>
               <li>
             <% } else { %>
               <li><a href="/category/<%= section.categoryId %>" class="back-link"><i
-                    class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
+                    class="fas fa-chevron-left me-2 mb-2"></i>zpět na předmět</a></li>
               <li>
             <% } %>
             <p class="m-0"><small id="sectionId" name="<%= section._id %>" cat="<%= section.categoryId %>">
