--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,6 +34,7 @@
               <a class="dropdown-item" href="/admin/dashboard">Dashboard</a>
             </li>
             <li><a class="dropdown-item" href="/admin/admin">Admin</a></li>
+            <li><a class="dropdown-item" href="/admin/jobs">Jobs</a></li>
             <li><a class="dropdown-item" href="/admin/stats">Statistiky</a></li>
             <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
             <li>
