--- a/views/admin/jobs.ejs
+++ b/views/admin/jobs.ejs
@@ -21,7 +21,7 @@
       <span class="text-bold">Zdroj</span>
     </div>
     <div class="col-1 text-center">
-      <span class="text-bold">Strany</span>
+      <span class="text-bold">Znaky</span>
     </div>
     <div class="col-1 text-center">
       <span class="text-bold">Plánované kredity</span>
@@ -53,7 +53,7 @@
           <span><%= job.source %></span>
         </div>
         <div class="col-1 d-flex justify-content-center">
-            <span><%= job.extractedTextPages %></span>
+            <span><%= job.extractedTextLength %></span>
         </div>
         <div class="col-1 d-flex justify-content-center">
             <span><%= job.expectedCredits %></span>
